Devel::Cover.pm history

Release 0.54 - 
 - Make html_basic prettier.
 - Fix pod coverage percentages.
 - Fix integer <-> pointer conversion warnings (Robin Barker).
 - Add more tests for sort bug fixed in 0.53 (Rob Kinyon).

Release 0.53 - 17th April 2005
 - Clean up database directories.
 - Allow require File::Spec->catfile('t', 'common.pl'); (from an example by
   Randy W. Sims).
 - Fix core dump associated with sort subs and add test case supplied by
   Leif Eriksen.
 - Add extra options for coverage criteria.
 - Allow pod coverage options to be specified.
 - Update copyrights.
 - Allow Test::Differences output to be displayed usefully.
 - Test against perl-5.9.3.

Release 0.52 - 13th December 2004
 - Fix thread locking bug (Ruslan Zakirov).
 - Make valgrind happy.
 - Fix gcov2perl (Steve Peters).
 - Restore failure message to CLONE.

Release 0.51 - 29th November 2004
 - Handle $y || undef.
 - Small branch coverage fix.
 - Improve reporting of uncoverable constructs in html reports.
 - Test against perl-5.8.6.
 - Recommend at least perl-5.8.2.

Release 0.50 - 25th October 2004
 - Add -test option to cover.
 - Fix missing coverage when calling a sub in an ignored module.
 - Add module_ignore test.
 - Add uncoverable options to cover.

Release 0.49 - 6th October 2004
 - Compile on Win32 (and elsewhere) (Steve Hay).

Release 0.48 - 5th October 2004
 - Working towards thread safety.
 - Test against perl-5.8.5.
 - Store perl version number in Inc.pm and complain if it doesn't match.
 - Add annotation API and Random example.
 - Display run information in text report.
 - Remove POSIX path bodge which is now properly fixed.
 - Update test results for new functionality.
 - Add -select_re and -ignore_re options to cover.
 - Sort out "ignoring extra subroutine" and friends.
 - Add eval2 and eval_use tests.
 - Ignore *.t by default with blib.
 - Add beginnings of sort report.
 - Bump up DB version.
 - Fix problems with references in INC (which can't be handled).