@@ -19,3 +19,5 @@ lib/Devel/Cover/Inc.pm$
 ^Devel-Cover-
 .patch$
 .rej$
+.debug$
+^tmp/
